# rstrouter

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
src/args/: types.rs
src/endpoints/: mod.rs  parser.rs  route.rs  types.rs
src/engine/: context.rs  mod.rs
src/engine/tasks/: assign.rs  declaration.rs  http.rs  mock.rs  mod.rs  ret.rs  switch.rs  task.rs  template.rs
test_dsl/: .guard.yml
test_dsl/test/GET/: empty.yml  some.yml  test_request.yml
test_dsl/test/POST/some/: empty.yaml
unittest_dsl/test/GET/: .guard.yml
unittest_dsl/test/GET/test/: endp.yml
unittest_dsl/test/POST/: endp.yml
unittest_dsl/test/TEMPLATES/: test.yml
