[package]
name = "rstrouter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
rstmytype = { git = "https://github.com/Arcimiendar/rstmytype.git" }
serde_yaml_ng = "0.10.0"
log = "0.4.27"
log4rs = "1.3.0"
clap = { version = "4.5.45", features = ["derive", "env"] }
axum = "0.8.4"
itertools = "0.14.0"
serde_json = "1.0.143"
async-trait = "0.1.89"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12.23", features = ["json"] }
rquickjs = { version = "0.9.0", features = ["parallel"] }
rquickjs-serde = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
httpmock = "0.7.0"
